--- a/CS61A/app/src/main/res/layout/assignment_card_view.xml
+++ b/CS61A/app/src/main/res/layout/assignment_card_view.xml
@@ -2,4 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:elevation="2dp"
+        android:id="@+id/assignment_card_view">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/main_assignment_relative_layout">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:id="@+id/assignment_name"
+                android:textSize="24dp"
+                />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
