--- a/CS61A/app/src/main/res/layout/activity_main.xml
+++ b/CS61A/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,13 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context=".MainActivity">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/refresh_assignment_list">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_assignment_list"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
