--- a/CS61A/app/src/main/res/layout/activity_main.xml
+++ b/CS61A/app/src/main/res/layout/activity_main.xml
@@ -7,32 +7,16 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/refresh_assignment_list"></android.support.v4.widget.SwipeRefreshLayout>
+        android:id="@+id/refresh_assignment_list">
+
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_assignment_list"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="82dp" />
+        android:layout_marginTop="29dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Piazza Search Bar"
-        android:id="@+id/piazzaSearch"
-        android:layout_marginTop="36dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/searchButton"
-        android:src="@mipmap/ic_search_black_24dp"
-        android:layout_alignBottom="@+id/piazzaSearch"
-        android:layout_centerHorizontal="true" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
