--- a/CS61A/app/src/main/res/menu/menu.xml
+++ b/CS61A/app/src/main/res/menu/menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cs61a="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:title="Settings"
+        android:id="@+id/settings"/>
     <item
         android:id="@+id/app_credits"
         android:title="Credits"
