--- a/CS61A/app/src/main/res/layout/activity_main.xml
+++ b/CS61A/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context=".MainActivity">
@@ -18,5 +21,17 @@
         android:layout_marginTop="29dp" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
-
-</RelativeLayout>
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_anchorGravity="bottom|right"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="1dp"
+        android:src="@drawable/denero"
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:elevation="5dp"
+        android:id="@+id/announcements"
+        app:layout_anchor="@id/refresh_assignment_list"
+        />
+</android.support.design.widget.CoordinatorLayout>
