--- a/CS61A/app/src/main/res/values/arrays.xml
+++ b/CS61A/app/src/main/res/values/arrays.xml
@@ -3,6 +3,8 @@
     <string-array name="services">
         <item>1 hour</item>
         <item>2 hours</item>
+        <item>6 hours</item>
+        <item>12 hours</item>
         <item>1 day</item>
         <item>2 days</item>
     </string-array>
