Added feedback button.

--- a/CS61A/app/src/main/res/menu/menu.xml
+++ b/CS61A/app/src/main/res/menu/menu.xml
@@ -9,4 +9,8 @@
         android:id="@+id/app_credits"
         android:title="Credits"
         cs61a:showAsAction="never"/>
+    <item
+        android:id="@+id/email"
+        android:title="Feedback"
+        cs61a:showAsAction="never"/>
 </menu>
