--- a/app/src/main/res/layout/activity_assignment.xml
+++ b/app/src/main/res/layout/activity_assignment.xml
@@ -1,15 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/main_drawer_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AssignmentActivity"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+    <FrameLayout
+        android:id="@+id/main_frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/background_toolbar"
         android:layout_width="match_parent"
         android:layout_height="116dp"
-        android:background="@color/colorPrimary" />
+        android:background="@color/colorPrimary"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -81,5 +93,25 @@
                 </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
-
 </RelativeLayout>
+        </FrameLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_gravity="start"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:src="@drawable/background"
+            android:scaleType="fitXY"/>
+        <ListView
+            android:id="@+id/main_class_list"
+            android:layout_width="280dp"
+            android:background="@android:color/white"
+            android:layout_height="match_parent"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"/>
+    </LinearLayout>
+    </android.support.v4.widget.DrawerLayout>
